Remove wp-config

--- a/wp-content/plugins/wp-ultimate-post-grid/assets/css/public/pagination.scss
+++ b/wp-content/plugins/wp-ultimate-post-grid/assets/css/public/pagination.scss
@@ -3,6 +3,10 @@
     cursor: pointer;
     position: relative;
 }
+
+.wpupg-pagination-loader {
+    position: relative;
+}
   
 @keyframes wpupg-spinner {
     to {transform: rotate(360deg);}
